--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -18,8 +18,10 @@ services:
       ALLOWED_ORIGIN: "*"
       LOGGING_LEVEL: "debug"
       AUTHORIZATION_TOKEN: "string"
-      STORAGE_ADDRESS: "http://storage:80/api/signals"
-      STORAGE_TOKEN: "ok"
+      SIGNAL_QUEUE_URL: "http://azurite:10001/devstoreaccount1/signals"
+      SIGNAL_QUEUE_ACCOUNT_NAME: "devstoreaccount1"
+      SIGNAL_QUEUE_ACCOUNT_KEY: "Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw=="
+      SIGNAL_QUEUE_MESSAGE_TTL: "60s"
   storage:
     ports:
       - "8090:80"
@@ -27,10 +29,13 @@ services:
       context: ../storage
       dockerfile: Dockerfile
     environment:
-      - "AzureWebJobsStorage='UseDevelopmentStorage=true'"
+      - "AzureWebJobsStorage=DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;BlobEndpoint=http://azurite:10000/devstoreaccount1;"
       - "FUNCTIONS_WORKER_RUNTIME=java"
       - "SIGNAL_EXPIRY=30"
       - "USE_STUBBED_STORAGE=false"
-      - "SignalsStorageConnectionString=DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;TableEndpoint=http://host.docker.internal:10002/devstoreaccount1;"
+      - "SignalsStorageConnectionString=DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;TableEndpoint=http://azurite:10002/devstoreaccount1;BlobEndpoint=http://azurite:10000/devstoreaccount1;"
+      - "SignalsQueueConnectionString=DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;TableEndpoint=http://azurite:10002/devstoreaccount1;BlobEndpoint=http://azurite:10000/devstoreaccount1;QueueEndpoint=http://azurite:10001/devstoreaccount1;"
+  azurite:
+    image: mcr.microsoft.com/azure-storage/azurite
 
 ## sduHCwRYWeSNXQqgzVFEb+6StYMD7RCav4OrAZDIn5g/zxiyxfKuXSIOagQU9uVRXyj+gRHtk5RN+ASt88uXwg==
