implement queue - working integration test

--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.19-alpine
+FROM golang:1.19-alpine as build
 
 WORKDIR /app
 
@@ -10,6 +10,10 @@ COPY . ./
 
 RUN go build ./cmd/api.go
 
+FROM alpine
+
+COPY --from=build /app/api /usr/local/bin/api
+
 EXPOSE 8080
 
-CMD [ "./api" ]
+CMD [ "/usr/local/bin/api" ]
