--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -39,6 +39,7 @@ services:
       - "SIGNAL_EXPIRY=30"
       - "AZURE_FUNCTIONS_ENVIRONMENT=Development"
       - "USE_STUBBED_STORAGE=false"
+      - "ALLOWED_ORIGIN=*"
       - "SignalsStorageConnectionString=DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;TableEndpoint=http://azurite:10002/devstoreaccount1;"
       - "SignalsQueueConnectionString=DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;QueueEndpoint=http://azurite:10001/devstoreaccount1;"
   azurite:
