--- a/flow_merchant/.gitignore
+++ b/flow_merchant/.gitignore
@@ -29,7 +29,7 @@ dist
 .python_packages/
 
 # Python Environments
-.env
+# .env
 .venv
 env/
 venv/
@@ -46,3 +46,8 @@ __pycache__/
 __blobstorage__
 __queuestorage__
 __azurite_db*__.json
+
+.terraform*
+*.tfstate
+*.tfstate.*
+*.tfvars
